--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.4.5"
-  },
-  "type": "module"
+  }
 }
